# ProjectStationMeteo

./: .gitignore  .gitmodules  CMakeLists.txt  GlobalSettings.cpp  GlobalSettings.h  LangManager.cpp  LangManager.h  Makefile  Makefile.am  README.md  SettingsDlg.qml  Station_meteo.pro  StyleManager.cpp  StyleManager.h  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  balise.cpp  balise.h  baliseMer.cpp  baliseMer.h  baliseMer.hpp  baliseMerPanel.cpp  baliseMerPanel.h  baliseMerPanel.ui  baliseMerPanel.ui.autosave  baliseVille.cpp  baliseVille.h  baliseVille.hpp  balisevillepanel.cpp  balisevillepanel.h  balisevillepanel.ui  baseDay.qss  baseNight.qss  bme280Server.service  bme280Server.service.in  client.cpp  customgraph.cpp  customgraph.h  datasMeteo.cpp  (+35 more)
Client/: README.md
Server/: README.md
Server/driver_bme280/: main.c
apiweb/: mainwindow.cpp  mainwindow.h  mainwindow.ui
cmake/: 3rdparty.cmake  bme280.cmake  libuv.cmake  sqlite.cmake  uvcpp.cmake
doc/: Architecture.pptx  BaliseMerPanel.bak  BaliseMerPanel.pptx  StationMeteo_Soutenance.pptx  StationMeteo_Soutenance_Lucas.pptx  StationMeteo_Soutenance_Mickael.pptx  StationMeteo_Soutenance_Stephane.pptx  UML_App_Client.xmi
driver_bme280/: Makefile  main.c  test
lang/: station_meteo_en.ts  station_meteo_fr.ts
langs/: station_meteo_en.ts  station_meteo_fr.ts
libs/uv_cpp/uv/: EventLoop.cpp  TcpClient.cpp
scripts/: bme280Server.service
shaders/: quad.frag
src/: Build.h  Makefile  MeasureDataBase.cpp  MeasureDataBase.h  SensorBME280.cpp  SensorBME280.h  SensorHistory.cpp  SensorHistory.h  SensorHttpServer.cpp  SensorHttpServer.h  SystemInfos.cpp  SystemInfos.h  database.cpp  database.h  main.cpp  sensor.h  sensor_bme280.c.bak
src/driver_bme280/: Makefile  main.c
styles/: Blue.qss  baseDay.qss  baseNight.qss
